feat: add relationship to models
