# routes/api_v1.php
@@ -5,6 +5,7 @@ use App\Http\Controllers\API\v1\CountryController;
 use App\Http\Controllers\API\v1\GardenerController;
 use App\Http\Controllers\API\v1\CustomerController;
 use App\Http\Controllers\API\v1\LocationAreaController;
+use App\Http\Controllers\API\v1\GardenersPerCountryController;
 
 
 Route::get('', 'App\Http\Controllers\API\v1\WelcomeController@index');
@@ -12,6 +13,8 @@ Route::get('', 'App\Http\Controllers\API\v1\WelcomeController@index');
 Route::resource('countries', CountryController::class, ['only' => ['index', 'show']]);
 
 Route::resource('locations', LocationAreaController::class, ['only' => ['index', 'show']]);
+
+Route::resource('gardenersByCountry', GardenersPerCountryController::class, ['only' => ['index', 'show']]);
 
 Route::resource('gardeners', GardenerController::class, ['only' => ['index', 'show', 'store', 'update', 'destroy']]);
 
